--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
   <!-- Container for results -->
-  <div id="results"></div>
-  <div id="results"></div>
+  <div id="top10"></div>
+  <div id="upanime"></div>
 </body>
 </html>
