--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
   <!-- Container for results -->
   <div id="top10"></div>
-  <div id="upanime"></div>
+  <div id="recentAnime"></div>
 </body>
 </html>
