--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Anime Test</title>
 </head> 
 <script src="java.js"></script>
+<script src="java1.js"></script>
 <body>
     <h1>Anime Explorer</h1>
 
