--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Anime Test</title>
+  <link rel="stylesheet" href="styles.css" />
 </head> 
 <script src="java.js"></script>
 <script src="java1.js"></script>
