--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
   <title>Anime Test</title>
 </head> 
-<script src="java.js"></script>
-<script src="java1.js"></script>
 <body>
     <h1>Anime Explorer</h1>
 
@@ -19,6 +17,11 @@
 
   <!-- Container for results -->
   <div id="top10"></div>
-  <div id="upanime"></div>
+  <div id="recentAnime"></div>
+
+
+
+<script src="java.js"></script>
+<script src="java1.js"></script>
 </body>
 </html>
