--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
 
   <!-- Container for results -->
+    <h2>Top Anime</h2>
   <div id="top10"></div>
+  <h2>Recently Added Anime</h2>
   <div id="recentAnime"></div>
 
 
