--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head> 
 <body>
     <h1>Anime Explorer</h1>
-
+<script src="java.js"></script>
+<script src="java1.js"></script>
   <!-- Search input -->
   <div class="search-section">
     <input type="text" id="searchInput" placeholder="Search anime..." />
