--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   
   <!-- Results container -->
   <div id="results"></div>
-  <h2 recent-searches>Recent Searches:</h2>
-  <div id="recentAnimes"></div>
+ <h2>Recent Anime</h2>
+  <div id="recentAnime"></div>
 
 
 
