--- a/index.html
+++ b/index.html
@@ -10,33 +10,42 @@
 <body>
   <h1>🎬 Anime Explorer</h1>
 
-  <!-- Search input -->
-  <div class="search-section">
-    <input type="text" id="searchInput" placeholder="Search anime..." />
-    <button id="searchBtn">Search</button>
+  <div class="layout">
+    <!-- LEFT SIDE (Main Content) -->
+    <div class="main-content">
+      <!-- Search input -->
+      <div class="search-section">
+        <input type="text" id="searchInput" placeholder="Search anime..." />
+        <button id="searchBtn">Search</button>
+      </div>
+
+      <!-- Dropdown for top anime -->
+      <div class="top-section">
+        <label for="rankingSelect">Show top anime: </label>
+        <select id="rankingSelect">
+          <option value="airing">Today</option>
+          <option value="upcoming">Weekly</option>
+          <option value="bypopularity">Monthly</option>
+        </select>
+      </div>
+
+      <!-- Results container -->
+      <div id="results"></div>
+
+      <h2>Recent Anime</h2>
+      <div id="recentAnime"></div>
+    </div>
+
+    <!-- RIGHT SIDE (Sidebar) -->
+    <aside class="sidebar">
+      <h2>🔥 Top 5 Anime</h2>
+      <div id="sidebarTopAnime"></div>
+    </aside>
   </div>
-
-  <!-- Dropdown for top anime -->
-  <div class="top-section">
-    <label for="rankingSelect">Show top anime: </label>
-    <select id="rankingSelect">
-      <option value="airing">Today</option>
-      <option value="upcoming">Weekly</option>
-      <option value="bypopularity">Monthly</option>
-      <option value="all">All Time</option>
-    </select>
-  </div>
-
-  
-  <!-- Results container -->
-  <div id="results"></div>
- <h2>Recent Anime</h2>
-  <div id="recentAnime"></div>
-
-
 
   <!-- Scripts should be loaded LAST -->
   <script src="java.js"></script>
   <script src="java1.js"></script>
+  <script src="sidebar.js"></script>
 </body>
 </html>
