--- a/index.html
+++ b/index.html
@@ -52,8 +52,21 @@
 </aside>
 
 
-  <script src="java.js"></script>
-  <script src="java1.js"></script>
-  <script src="sidebar.js"></script>
+<!-- Preview Modal -->
+<div id="previewModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <div id="modalBody">Loading...</div>
+  </div>
+</div>
+
+<!-- Scripts -->
+<script src="java.js"></script>
+<script src="java1.js"></script>
+<script src="sidebar.js"></script>
+<script src="preview.js"></script>
+</body>
+</html>
+
 </body>
 </html>
