--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>🎬 Anime Explorer</h1>
+  <h1>Anime Explorer</h1>
 
   <div class="layout">
     <!-- LEFT SIDE (Main Content) -->
@@ -40,7 +40,7 @@
 
     <!-- RIGHT SIDE (Sidebar) -->
     <aside class="sidebar">
-      <h2>🔥 Top 5 Anime</h2>
+      <h2>Top 5 Anime</h2>
       <div class="sidebar-filter">
         <label for="sidebarSelect">Filter: </label>
         <select id="sidebarSelect">
